@@ -1,3 +1,8 @@
+2008-09-25  Patrice Dumas  <dumas@centre-cired.fr>
+
+	* texi2html.pl: associate nodes that are not already associated 
+	with the top node in case only sections are used.
+
 2008-09-24  Patrice Dumas  <dumas@centre-cired.fr>
 
 	* texi2html.pl, texi2html.init: remove THIS_HEADER. Instead 
